--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"express": "~4.16.1",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
-		"pg": "^8.14.1"
+		"pg": "^8.14.1",
+		"postgres": "^3.4.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.23.0",
