--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
 		"pg": "^8.14.1",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"vercel": "^41.4.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.23.0",
