--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"morgan": "~1.9.1",
 		"pg": "^8.14.1",
 		"postgres": "^3.4.5",
+		"qrcode": "^1.5.4",
 		"vercel": "^41.4.1"
 	},
 	"devDependencies": {
