--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"appwrite": "^17.0.1",
 		"bcryptjs": "^3.0.2",
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.41.0",
