--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
 	"name": "pims",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"start": "node app.js",
-		"dev": "nodemon app.js"
+		"dev": "tsx watch src/index.ts",
+		"dev:nodemon": "nodemon",
+		"start": "tsx src/index.ts",
+		"build": "tsc",
+		"prod": "node --enable-source-maps dist/index.js",
+		"test": "echo \"No tests yet\" && exit 0"
 	},
 	"dependencies": {
 		"appwrite": "^17.0.1",
@@ -21,14 +25,23 @@
 		"pg": "^8.14.1",
 		"postgres": "^3.4.5",
 		"qrcode": "^1.5.4",
+		"ts-node": "^10.9.2",
 		"vercel": "^41.4.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.23.0",
+		"@types/cookie-parser": "^1.4.8",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^5.0.1",
+		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node": "^22.14.1",
 		"@types/pg": "^8.11.11",
+		"@types/qrcode": "^1.5.5",
 		"drizzle-kit": "^0.30.5",
 		"eslint": "^9.23.0",
 		"globals": "^16.0.0",
-		"nodemon": "^3.1.9"
+		"nodemon": "^3.1.9",
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.3"
 	}
 }
