--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"appwrite": "^17.0.1",
+		"axios": "^1.9.0",
 		"bcryptjs": "^3.0.2",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
@@ -16,6 +17,7 @@
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.41.0",
 		"express": "~4.16.1",
+		"jimp": "^1.6.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
 		"pg": "^8.14.1",
