added print-job model and controller

--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.41.0",
+		"ejs": "^3.1.10",
 		"express": "~4.16.1",
 		"inquirer": "^12.6.3",
 		"jimp": "^1.6.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
+		"pdfkit": "^0.17.1",
+		"pdfkit-table": "^0.1.99",
 		"pg": "^8.14.1",
 		"postgres": "^3.4.5",
+		"puppeteer": "^24.10.2",
 		"qrcode": "^1.5.4",
 		"vercel": "^41.4.1"
 	},
