--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.41.0",
 		"ejs": "^3.1.10",
-		"express": "~4.16.1",
+		"express": "^5.1.0",
 		"inquirer": "^12.6.3",
 		"jimp": "^1.6.0",
 		"jsonwebtoken": "^9.0.2",
