--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node app.js",
-		"dev": "nodemon app.js"
+		"dev": "nodemon app.js",
+		"db:seed": "node scripts/seed.js"
 	},
 	"dependencies": {
 		"appwrite": "^17.0.1",
@@ -32,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.23.0",
+		"@faker-js/faker": "^9.8.0",
 		"@types/pg": "^8.11.11",
 		"drizzle-kit": "^0.30.5",
 		"eslint": "^9.23.0",
